[package]
name = "reflex-prompter"
version = "1.0.0"
description = "A presentation prompter for language practice"
authors = ["Your Name"]
license = "MIT OR Apache-2.0"
repository = ""
default-run = "reflex-prompter"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [ "api-all"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
